welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if(message = "R") { droite(); avance() }
             ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "L") { gauche(); avance() }
                  ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "I") { retourne(); avance() }
                  ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "A") { avance() }
                  ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "B") { avance(2) }
                  ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "C") { avance(3) }
                  ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "Z") { recule() }
                  ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "Y") { recule(2) }
                  ^BDRBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(message = "X") { recule(3) }
                  ^